// Copyright 2015, gRPC Authors
// All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";
import "common.proto";
option java_package = "org.ditto.sexyimage.grpc";

// The image service definition.
service ImageMan {

    // A server-to-client streaming RPC.
    //
    // Obtains images whose types are the given normal/poster/sexy/porn.  Results are
    // streamed rather than returned at once (e.g. in a response message with a
    // repeated field), as the lastUpdated maybe an very old time and contain a
    // huge number of images.
    rpc List (ListRequest) returns (stream ImageResponse) {
    }

    rpc Delete (DeleteRequest) returns (StatusResponse) {
    }

    rpc Upsert (UpsertRequest) returns (StatusResponse) {
    }
}


message ListRequest {
    ImageType type = 1;
    int64 lastUpdated = 2;
}

message DeleteRequest {
    string url = 1;
}

message UpsertRequest {
    string url = 1;
    oneof inforUrl {
        bool infoUrl_toUpdate = 2;
        string infoUrl_value = 3;
    }
    oneof title {
        bool title_toUpdate = 4;
        string title_value = 5;
    }
    oneof desc {
        bool desc_toUpdate = 6;
        string desc_value = 7;
    }
    ImageType type = 8;
    bool active = 9;
    bool toprank = 10;
}
